--- a/Secao3.html
+++ b/Secao3.html
@@ -23,11 +23,15 @@
                             size='10'
                             name='dt Nascimento'
                             required/>
+            <br/><label>Salário:</label>
+                <br/><input type='number'
+                            size='10'
+                            name='salario'
+                            required/>
             <br/><input type='submit'
                         value='enviar'/>
-            <input type='reset'
-                   value='limpar'/>
-            <!--<input type="button">--><!--button nao serve para nada a nao ser que tenha um backend-->
+                <input type='reset'
+                        value='limpar'/>
         </form>
     </body>
 </html>
