--- a/Secao4.html
+++ b/Secao4.html
@@ -1,10 +1,21 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Secao 4</title>
-    </head>
-    <body>
+    <head> 
+        <meta charset="UTF-8"/>  
+        <title>Seção 4</title> 
+    </head> 
+    <body> 
         <h4><a href='index.html'>HOME</a></h4>
-    </body>
+       <center><h3> Formulário </h3></center> 
+    </br>
+    <center>    <table border=5 WIDTH=75%>
+        <!--CABEÇALHO DA COLUNA  -->
+        <tr>
+            <td><center><b>Nome Completo</b></center></td>
+            <td><center><b>Cor Favorita</b></center></td>
+            <td><center><b>Nascimento</b></center></td>
+            <td><center><b>Salário</b></center></td>
+
+        </tr>
+</body>
 </html>
