--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 <body>
     <img src = 'dog.jpg'/>
     <h3>Exercício de Revisão</h3>
-    <h4><a href='Secao1.html'>Seção 1</a></h4>
-    <h4><a href='Secao2.html'>Seção 2</a></h4>
-    <h4><a href='Secao3.html'>Seção 3</a></h4>
-    <h4><a href='teste.html'>teste</a></h4>
+    <h4><a href='Secao1.html'>Seção 1 - Descrição</a></h4>
+    <h4><a href='Secao2.html'>Seção 2 - Listagens</a></h4>
+    <h4><a href='Secao3.html'>Seção 3 - Formulário</a></h4>
+    <h4><a href='Secao4.html'>Seção 4 - Tabela</a></h4>
 </body>
+<font size = 3> Exercício de Revisão Nome: Leandro Seyan Arakaki RA 1901703</font>    
 </html>
