--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset = 'UTF-8'>
     <title>Exercício de Revisão</title>
+    <link rel='stylesheet' type='text/css' href='estilo.css'/>
 </head>
 <body>
     <img src = 'dog.jpg'/>
-    <h3>Exercício de Revisão</h3>
-    <h4><a href='Secao1.html'>Seção 1 - Descrição</a></h4>
+    <div>    <h2>Exercício de Revisão</h2>
+    </div>
+    <h4><strong><a href='Secao1.html'>Seção 1 - Descrição</a></strong></h4>
     <h4><a href='Secao2.html'>Seção 2 - Listagens</a></h4>
     <h4><a href='Secao3.html'>Seção 3 - Formulário</a></h4>
     <h4><a href='Secao4.html'>Seção 4 - Tabela</a></h4>
