--- a/Secao2.html
+++ b/Secao2.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Secao 2</title>
+        <link rel='stylesheet' type='text/css' href='estilo.css'/>
     </head>
     <body>
         <h4><a href='index.html'>HOME</a></h4>
