--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@
     <h4><a href='Secao3.html'>Seção 3 - Formulário</a></h4>
     <h4><a href='Secao4.html'>Seção 4 - Tabela</a></h4>
 </body>
-<font size = 3> Exercício de Revisão Nome: Leandro Seyan Arakaki RA 1901703</font>    
+<footer> Exercício de Revisão Nome: Leandro Seyan Arakaki RA 1901703</footer>    
 </html>
