--- a/Secao4.html
+++ b/Secao4.html
@@ -7,16 +7,21 @@
     </head> 
     <body> 
         <h4><a href='index.html'>HOME</a></h4>
-       <center><h3> Formulário </h3></center> 
-    </br>
-    <center>    <table border=5 WIDTH=75%>
+        <h3> Formulário </h3> 
+        <table border='1'>
         <!--CABEÇALHO DA COLUNA  -->
         <tr>
-            <td><center><b>Nome Completo</b></center></td>
-            <td><center><b>Cor Favorita</b></center></td>
-            <td><center><b>Nascimento</b></center></td>
-            <td><center><b>Salário</b></center></td>
-
+            <th>Nome Completo</th>
+            <th>Cor Favorita</th>
+            <th>Nascimento</th>
+            <th>Salário</th>
         </tr>
+        <tr>
+            <td>a</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        </table>
 </body>
 </html>
