--- a/Secao4.html
+++ b/Secao4.html
@@ -3,7 +3,7 @@
     <head> 
         <meta charset="UTF-8"/>  
         <title>Seção 4</title> 
-        <link rel='stylesheet' type='text/css' href='estilo.css'/>
+        <link rel='stylesheet' type='text/css' href='estilo.css' class='submit'/>
     </head> 
     <body> 
         <h4><a href='index.html'>HOME</a></h4>
@@ -17,7 +17,7 @@
             <th>Salário</th>
         </tr>
         <tr>
-            <td>a</td>
+            <td>.</td>
             <td></td>
             <td></td>
             <td></td>
