--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset = 'UTF-8'>
     <title>Exercício de Revisão</title>
     <link rel='stylesheet' type='text/css' href='estilo.css'/>
+    <script type="text/javascript" src="java.js"></script>
 </head>
 <body>
     <img src = 'dog.jpg'/>
-    <div>    <h2>Exercício de Revisão</h2>
-    </div>
-    <h4><strong><a href='Secao1.html'>Seção 1 - Descrição</a></strong></h4>
-    <h4><a href='Secao2.html'>Seção 2 - Listagens</a></h4>
-    <h4><a href='Secao3.html'>Seção 3 - Formulário</a></h4>
-    <h4><a href='Secao4.html'>Seção 4 - Tabela</a></h4>
+    <p align='right'>Exercício de Revisão
+    </p>
+    <ul>
+        <il><h4><strong><a href='Secao1.html'>Seção 1 - Descrição</a></strong></h4></il>
+        <il><h4><a href='Secao2.html'>Seção 2 - Listagens</a></h4></il>
+        <il><h4><a href='Secao3.html'>Seção 3 - Formulário</a></h4></il>
+        <il><h4><a href='Secao4.html'>Seção 4 - Tabela</a></h4></il>
+        <il><h4><a href='rodape.html'>Rodapé</a></h4></il>
+    </ul>
 </body>
-<footer> Exercício de Revisão Nome: Leandro Seyan Arakaki RA 1901703</footer>    
 </html>
