--- a/Secao3.html
+++ b/Secao3.html
@@ -12,26 +12,28 @@
                 <br/><input type='text' 
                             maxlength='50'
                             size='60'
-                            name='user'
-                            required/>
+                            name='user'/>
             <br/><label>Cor Favorita:</label>
                 <br/><input type='text'
                             maxlength='20'
                             name='color'
-                            required/>
+                            />
             <br/><label>Data de Nascimento:</label>
                 <br/><input type = 'date'
                             size='10'
                             name='dt Nascimento'
-                            required/>
+                            />
             <br/><label>Salário:</label>
                 <br/><input type='number'
                             name='salario'
-                            required/>
-            <br/><input type='submit'
-                        value='enviar'/>
+                            />
+            <br/><input type='button'
+                        value='enviar'
+                        onclick="repeticao()"/>
             <input type='reset'
                         value='limpar'/>
         </form>
+        <script type="text/javascript" src="repeticao.js"></script>
+
     </body>
 </html>
