--- a/Secao3.html
+++ b/Secao3.html
@@ -7,33 +7,39 @@
     </head>
     <body>
         <h4><a href='index.html'>HOME</a></h4>     
-        <form action = 'Secao4.html' method='POST' name='Dados'>
-            <label>Nome Completo:</label>
+        <form action = 'Secao4.html' method='POST' name='Dados' class='classe1'>
+            <label class='classe2'>Nome Completo:</label>
                 <br/><input type='text' 
                             maxlength='50'
                             size='60'
                             name='user'/>
-            <br/><label>Cor Favorita:</label>
+            <br/><label class='classe2'>Cor Favorita:</label>
                 <br/><input type='text'
                             maxlength='20'
                             name='color'
                             />
-            <br/><label>Data de Nascimento:</label>
+            <br/><label class='classe2'>Data de Nascimento:</label>
                 <br/><input type = 'date'
                             size='10'
                             name='dt Nascimento'
                             />
-            <br/><label>Salário:</label>
+            <br/><label class='classe2'>Salário:</label>
                 <br/><input type='number'
                             name='salario'
                             />
             <br/><input type='button'
                         value='enviar'
-                        onclick="repeticao()"/>
+                        />
             <input type='reset'
                         value='limpar'/>
         </form>
         <script type="text/javascript" src="repeticao.js"></script>
+        <form method="GET" onclick="function repeticao()">
+            <button type="submit"
+                    value='click'
+                    class='click'>clique
+                    </button>
+        </form>
 
     </body>
 </html>
